@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) ab: Add option -I to use the Server Name Indication (SNI) extension on
+     outgoing TLS connections, according to the Host header (if any) or the
+     requested URL's hostname otherwise.  [Yann Ylavic]
+
   *) mod_ssl: reset client-verify state of ssl when aborting renegotiations.
      [Erki Aring <erki@example.ee>, Stefan Eissing]
 
